<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:layout_alignParentLeft="true"
  android:layout_alignParentStart="true"
  android:layout_alignParentTop="true"
  android:orientation="vertical"
  app:layout_behavior="@string/appbar_scrolling_view_behavior"
  tools:context="br.ufg.prograd.centroaula.Principal"
  tools:showIn="@layout/principal">

  <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <ImageView
      android:id="@+id/imageView"
      android:layout_width="32dp"
      android:layout_height="50dp"
      android:layout_margin="6dp"
      android:contentDescription="@string/logo_UFG_hint"
      android:src="@drawable/ufg_logo1"/>

    <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="vertical">

      <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:text="@string/titulo1"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold"/>

      <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:text="@string/titulo2"
        android:textAppearance="?android:attr/textAppearanceMedium"/>
    </LinearLayout>

  </LinearLayout>

  <Button
    android:id="@+id/botaoA"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/centro_a"
    android:layout_gravity="center_horizontal"
    android:onClick="abrirCentro"/>

  <Button
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/centro_b"
    android:id="@+id/botaoB"
    android:layout_gravity="center_horizontal"/>

  <Button
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/centro_c"
    android:id="@+id/botaoC"
    android:layout_gravity="center_horizontal"/>

  <Button
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/centro_d"
    android:id="@+id/botaoD"
    android:layout_gravity="center_horizontal"/>

  <Button
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/centro_e"
    android:id="@+id/botaoE"
    android:layout_gravity="center_horizontal"/>

  <Button
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/centro_f"
    android:id="@+id/botaoF"
    android:layout_gravity="center_horizontal"/>

  <Button
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/centro_g"
    android:id="@+id/botaoG"
    android:layout_gravity="center_horizontal"/>
</LinearLayout>
