<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
  <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <ImageView
      android:id="@+id/imageView"
      android:layout_width="32dp"
      android:layout_height="50dp"
      android:layout_margin="6dp"
      android:contentDescription="@string/logo_UFG_hint"
      android:src="@drawable/ufg_logo1"/>

    <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="vertical">

      <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:text="@string/titulo1"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold"/>

      <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:text="@string/titulo2"
        android:textAppearance="?android:attr/textAppearanceMedium"/>
    </LinearLayout>

  </LinearLayout>

  <TextView
    android:id="@+id/tvMensagem"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    />

  <ProgressBar
    android:id="@+id/barraProgresso"
    style="?android:attr/progressBarStyleLarge"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:visibility="gone"
    />

    <GridView
      android:id="@+id/gvCentro"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:scrollbars="vertical|horizontal"/>
</LinearLayout>
